Fix minor layout bug
- Increase width of layout container to centre components properly at an extra-wide viewport width.

--- a/css/application.css
+++ b/css/application.css
@@ -119,7 +119,7 @@ label {
     justify-content: flex-start;
     align-items: flex-start;
     gap: 2rem;
-    max-width: 800px;
+    max-width: 900px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2rem;
