--- a/scss/base/_layout.scss
+++ b/scss/base/_layout.scss
@@ -79,7 +79,7 @@ label {
         align-items: flex-start;
         gap: 2rem;
 
-        max-width: 800px;
+        max-width: 900px;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 2rem;
